--- a/templates/admin/property/new.html.twig
+++ b/templates/admin/property/new.html.twig
@@ -2,7 +2,18 @@
 
 {% block body %}
   <div class="container mt-4">
-    <h1>Editer le bien</h1>
+    <h1>Créer un nouveau bien</h1>
     {{ include('admin/property/_form.html.twig', {button: 'Créer'}) }}
   </div>
 {% endblock %}
+
+{% extends 'base.html.twig' %}
+
+{% block body %}
+  <div class="container mt-4">
+    <h1>Editer le bien</h1>
+    {{ include('admin/property/_form.html.twig', {button: 'Editer'}) }}
+  </div>
+{% endblock %}
+
+
