--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -5,6 +5,19 @@
 {% block body %}
     <div class="jumbotron">
         <div class="container">
+
+            {% for message in app.flashes('success') %}
+                <div class="alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
+
+            {% if not form.vars.valid %}
+                <div class="alert alrt-danger">
+                    Attention à bien vérifer vos informations avant de soumettre le formulaire
+                </div>
+            {% endif %}
+
             <div class="row">
                 <div class="col-md-8">
                     {% if property.filename %}
@@ -21,6 +34,23 @@
                     <div class="text-primary" style="font-size: 4rem;font-weigth: bold;">{{ property.formattedPrice }}€
                     </div>
                     <a href="#" class="btn btn-primary">Contacter l'agence</a>
+                    <div id="contactForm" class="mt-4">
+                        {{ form_start(form) }}
+                        <div class="row">
+                            <div class="col">{{ form_row(form.firstname) }}</div>
+                            <div class="col">{{ form_row(form.lastname) }}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col">{{ form_row(form.phone) }}</div>
+                            <div class="col">{{ form_row(form.email) }}</div>
+                        </div>
+                        {{ form_rest(form) }}
+                        {{ form_rest(form) }}
+                        <div class="form-group">
+                            <button class="btn btn-primary">Envoyer</button>
+                        </div>
+                        {{ form_end(form) }}
+                    </div>
                 </div>
             </div>
         </div>
